[gd_scene load_steps=13 format=2]

[ext_resource path="res://Sprites/Player.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Border.png" type="Texture" id=2]
[ext_resource path="res://Sprites/RedLine.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Player1Movement.gd" type="Script" id=4]
[ext_resource path="res://Sprites/Ball.png" type="Texture" id=5]
[ext_resource path="res://Scripts/BallScript.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Player2Movement.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 56 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 320, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 240 )

[sub_resource type="CircleShape2D" id=4]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8, 224 )

[node name="Game" type="Node2D"]

[node name="Player1" type="KinematicBody2D" parent="."]
position = Vector2( 40, 223 )
script = ExtResource( 4 )

[node name="PlayerSprite" type="Sprite" parent="Player1"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player1"]
shape = SubResource( 1 )

[node name="Border" type="StaticBody2D" parent="."]

[node name="BorderSprite" type="Sprite" parent="Border"]
position = Vector2( 320, 240 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Border"]
position = Vector2( 320, 8 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Border"]
position = Vector2( 8, 240 )
shape = SubResource( 3 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Border"]
position = Vector2( 320, 472 )
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Border"]
position = Vector2( 632, 240 )
shape = SubResource( 3 )

[node name="Ball" type="KinematicBody2D" parent="."]
position = Vector2( 321, 234 )
script = ExtResource( 6 )

[node name="BallSprite" type="Sprite" parent="Ball"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource( 4 )

[node name="RedLine1" type="StaticBody2D" parent="."]

[node name="RedLine" type="Sprite" parent="RedLine1"]
position = Vector2( 24, 240 )
scale = Vector2( 1, 1.00448 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RedLine1"]
position = Vector2( 24, 240 )
shape = SubResource( 5 )

[node name="RedLine2" type="StaticBody2D" parent="."]

[node name="RedLine2" type="Sprite" parent="RedLine2"]
position = Vector2( 616, 240 )
scale = Vector2( 1, 1.00448 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RedLine2"]
position = Vector2( 616, 240 )
shape = SubResource( 5 )

[node name="Player2" type="KinematicBody2D" parent="."]
position = Vector2( 600, 223 )
script = ExtResource( 7 )

[node name="PlayerSprite" type="Sprite" parent="Player2"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2"]
shape = SubResource( 1 )
